--- a/QueryVsDot.Web/ClientApp/src/app/home/home.component.html
+++ b/QueryVsDot.Web/ClientApp/src/app/home/home.component.html
@@ -1,14 +1,22 @@
-<h1>Categories</h1>
-
+<h1 class="text-center">Categories</h1>
 
 <table class="table">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Number of products in category</th>
-        </tr>
-    </thead>
+  <thead>
     <tr>
-        <td></td>
+      <th>Id</th>
+      <th>Name</th>
+      <th></th>
     </tr>
+  </thead>
+  <tr *ngFor="let cat of categories">
+    <td>{{ cat.productCategoryId }}</td>
+    <td>{{ cat.name }}</td>
+    <td>
+      <a
+        [routerLink]="['/products', cat.productCategoryId]"
+        routerLinkActive="router-link-active"
+        >See products in category</a
+      >
+    </td>
+  </tr>
 </table>
